fix: sidebar bug on safari and disable aos on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,9 @@
 * {
     font-family: 'Poppins', sans-serif;
 }
+
+@media screen and (max-width: 480px) {
+    [data-aos-delay] {
+        transition-delay: 0s !important;
+    }
+}
